tests/ui/pattern/usefulness/match-arm-statics.stderr
error: unreachable pattern
  --> $DIR/match-arm-statics.rs:25:9
   |
LL |         TRUE_TRUE => (),
   |         --------- matches all the relevant values
...
LL |         (true, true) => ()
   |         ^^^^^^^^^^^^ no value can reach this
   |
note: the lint level is defined here
  --> $DIR/match-arm-statics.rs:2:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

